# CUBE

./: .gitignore  .gitmodules  README.md
CUBE/: CMakeLists.txt  main.cpp
CUBE/CUBELauncher/: CMakeLists.txt  CUBELauncher.cpp  CUBELauncher.h
CUBE/DataStructures/: CMakeLists.txt  GraphUtility.h  Segment.cpp
CUBE/FLP/: CMakeLists.txt  FLPColors.h  FLPSettingsWindow.cpp  FLPSettingsWindow.h  FLPWindow.cpp  FLPWindow.h  Genes.cpp  Genes.h  GeneticDisplay.cpp  GeneticDisplay.h  GeneticEasy.cpp  GeneticEasy.h  GeneticFLP.cpp  GeneticFLP.h  GeneticGUIListener.cpp  GeneticGUIListener.h  GeneticProblem.cpp  GeneticProblem.h  GeneticWorker.cpp  GeneticWorker.h  nogui.cpp
CUBE/GAP/: CMakeLists.txt  GAPAlgo.h  GAPConfig.h  GAPWindow.cpp  GAPWindow.h  GAPWorker.cpp  GAPworker.cpp  GAPworker.h  gap_config.h  gap_window.cpp  gap_window.h  gapworker.cpp  gapworker.h  matrix.h
CUBE/GameCore/: CMakeLists.txt  FiniteMemory.h  Game.cpp  Game.h  Invariant.cpp  Invariant.h  IterativeBest.cpp  IterativeBest.h  IterativeBetterRandom.cpp  IterativeBetterRandom.h  IterativeGameplay.cpp  IterativeGameplay.h  Listener.cpp  Listener.h  Player.cpp  Player.h  Strategy.cpp  Strategy.h  Timer.cpp  Timer.h  Util.h  VariableIterativeBest.cpp  VariableIterativeBest.h
CUBE/GameTheory/: CMakeLists.txt  GameTheoryUtility.cpp  GameTheoryUtility.h  GroupOfCells.cpp  GroupOfCells.h  HexagonalTiling.cpp  HexagonalTiling.h  MultiSquareTilling.cpp  MultiSquareTilling.h  RadiusConstraint.cpp  RadiusConstraint.h  RedBlackTree.h  RegularTiling.cpp  RegularTiling.h  SquareTiling.cpp  SquareTiling.h  Tiling.cpp  Tiling.h  TriangularTiling.cpp  TriangularTiling.h  TwoRadiusConstraint.cpp  TwoRadiusConstraint.h  UrbanBlockGame.cpp  UrbanBlockGame.h  segment.cpp  segment.h
CUBE/GameTheory/3D/: Building3DInvariant.cpp  Building3DInvariant.h  Buildings3DPerimeterPlayer.cpp  Buildings3DPerimeterPlayer.h  CMakeLists.txt  CoMod3DInvariant.cpp  CoMod3DInvariant.h  GreenSpaces3DInvariant.cpp  GreenSpaces3DInvariant.h  GroupOfCells3D.cpp  GroupOfCells3D.h  HeightConstraint.cpp  HeightConstraint.h  HeightPlayer.cpp  HeightPlayer.h  IncreaseHeightStrat.cpp  IncreaseHeightStrat.h  Inflate3DStrat.cpp  Inflate3DStrat.h  NumBuilding3DPlayer.cpp  NumBuilding3DPlayer.h  SegmentTree.h  UbranBlockGame3DInvariant.cpp  UbranBlockGame3DInvariant.h  group_of_cells3D.cpp  group_of_cells3D.h  main.cpp  segmenttree.h
CUBE/GameTheory/GUI/: CoModFrame.cpp  CoModFrame.h  CoModThread.cpp  CoModThread.h  CoModWorker.cpp  CoModWorker.h  DisplayTilingFrame.cpp  DisplayTilingFrame.h  GUIListener.cpp  GUIListener.h  GameFrame.cpp  GameFrame.h  GameWorker.cpp  GameWorker.h  TilingFrame.cpp  TilingFrame.h
CUBE/GameTheory/Invariants/: BuildingInvariant.cpp  BuildingInvariant.h  CoModInvariant.cpp  CoModInvariant.h  GreenSpaceInvariant.cpp  GreenSpaceInvariant.h  UbranBlockGameInvariant.cpp  UbranBlockGameInvariant.h
CUBE/GameTheory/Listeners/: PrintListener.cpp  PrintListener.h  TilingListener.cpp  TilingListener.h
CUBE/GameTheory/Players/: BuildingsPerimeterPlayer.cpp  BuildingsPerimeterPlayer.h  GreenSpaceRatePlayer.cpp  GreenSpaceRatePlayer.h  NumBuildingPlayer.cpp  NumBuildingPlayer.h  NumGreenSpacesPlayer.cpp  NumGreenSpacesPlayer.h  PorosityPlayer.cpp  PorosityPlayer.h
CUBE/GameTheory/Strategies/: ChangeBlockColorStrat.cpp  ChangeBlockColorStrat.h  ChangeColorStrat.cpp  ChangeColorStrat.h  DeflateStrat.cpp  DeflateStrat.h  InflateStrat.cpp  InflateStrat.h
CUBE/GraphGame/: CMakeLists.txt  GraphGame.cpp  GraphGame.h  GraphUtility.cpp  GraphUtility.h  graph.h
CUBE/GraphGame/GUI/: GraphControlWindow.cpp  GraphControlWindow.h  GraphFrame.cpp  GraphFrame.h  GraphListener.cpp  GraphListener.h  GraphWindow.cpp  GraphWindow.h  GraphWorker.cpp  GraphWorker.h
CUBE/GraphGame/Invariants/: ColorNodeInvariant.cpp  ColorNodeInvariant.h
CUBE/GraphGame/Players/: MovePlayer.cpp  MovePlayer.h  SwapPlayer.cpp  SwapPlayer.h  VariableMovePlayer.cpp  VariableMovePlayer.h
CUBE/GraphGame/Strats/: SwapColorStrat.cpp  SwapColorStrat.h
Exemples/FLP/: grid6x6.json  grid7x10.json  web10x10.json  web50x50.json
Exemples/GameGraph/: graph.json  graph2.json  grid10x10.json  grid10x10_costs.json  grid4x4.json  grid50x50.json  grid6x10.json
Exemples/GameTheory/: lock.json
LSCUBE/src/tiling/: Main.java
LSCUBE/src/tiling/constraint/: BuildingByBuildingValidation.java  BuildingsAreaConstraint.java  BuildingsPerimeterConstraint.java  FrontDistanceConstraint.java  GreenSpacesConstraint.java  GreenSpacesRateConstraint.java  NumBuildingConstraint.java  NumGreenSpacesConstraint.java  PerimeterConstraint.java  RadiusConstraint.java
LSCUBE/src/tiling/gui/: BWFrame.java  BWSquarePanel.java  BlackAndWhiteTilingPanel.java  HexagonPanel.java  SquarePanel.java  TilingFrame.java  TilingPanel.java  TrianglePanel.java
LSCUBE/src/tiling/neighbourhood/: ChangeColorAndMergeMove.java  ChangeColorAndMergeNeighbourhood.java  ChangeColorMove.java  ChangeColorNeighbourhood.java  GreenSpaceInBuildingNeighbourhood.java
LSCUBE/src/tiling/objective/: PorosityObjective.java
LSCUBE/src/tiling/othercomponent/: BWListener.java  CreateSolutionListener.java  ExportSearchListener.java  ExportSquareListener.java  GreenSpacesListener.java  ProgressSearchListener.java  RandomUrbanBlockGenerator.java  TilingListener.java
LSCUBE/src/tiling/solution/: BuildingInvariant.java  GreenSpacesInvariant.java  GroupOfCells.java  MergedGroupOfCells.java  UrbanBlockData.java  UrbanBlockInvariant.java  UrbanBlockSolution.java
LSCUBE/src/util/: Alphabet.java  Cell.java  Expansion.java  Grid.java  HexagonAlphabet.java  HexagonalTiling.java  ImportExport.java  Invariant.java  Orientation.java  OutputFrame.java  RelativePosition.java  RootOfUnit.java  SetOperations.java  SquareAlphabet.java  SquareTiling.java  Tiling.java  TooMuchNeighbourException.java  TriFunction.java  TriangleAlphabet.java  TriangularTiling.java  TwoDGrammar.java  TwoDWord.java  Utils.java
Scripts/Blender/: 3Dblock.json  generate_polyhedron.py
Scripts/QGIS/: README.md  qgis_buildgraph.py  qgis_exportgraph.py  qgis_timed_graph.py
(+4 files in other folders)
