add_library(GameCore Game.cpp Game.h
        Strategy.cpp Strategy.h
        Player.cpp Player.h
        Invariant.cpp Invariant.h
        Listener.cpp Listener.h
        IterativeGameplay.cpp IterativeGameplay.h
        IterativeBest.cpp IterativeBest.h
        IterativeBetterRandom.cpp IterativeBetterRandom.h
        Timer.cpp Timer.h
        FiniteMemory.h
        VariableIterativeBest.cpp VariableIterativeBest.h
        Util.h)
